1、主页面增加退出登录（右上角） 2、记录登记页面功能完善

--- a/src/layouts/managementLayouts.less
+++ b/src/layouts/managementLayouts.less
@@ -1,43 +1,48 @@
 .logo {
-    height: 32px;
-    background: rgba(255, 255, 255, 0.2);
-    margin: 16px;
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px;
 }
 
 .sider {
-    overflow: auto;
-    height: 100vh;
-    position: fixed;
-    left: 0;
+  overflow: auto;
+  height: 100vh;
+  position: fixed;
+  left: 0;
 }
 
 .header {
-    background-color: white;
-    padding-left: 0px;
+  background-color: white;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .content {
-    overflow: initial;
-    margin-top: 16px;
-    background-color: white;
-    padding: 24px;
+  overflow: initial;
+  margin-top: 16px;
+  background-color: white;
+  padding: 24px;
 }
 
 .footer {
-    text-align: center;
-    height: 96px;
-    line-height: 96px;
-    vertical-align: middle;
+  text-align: center;
+  height: 96px;
+  line-height: 96px;
+  vertical-align: middle;
 }
 
 .trigger {
-    font-size: 18px;
-    line-height: 64px;
-    padding: 0 24px;
-    cursor: pointer;
-    transition: color 0.3s;
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
 
-    &:hover {
-        color: #1890ff;
-    }
+  &:hover {
+    color: #1890ff;
+  }
+}
+
+.logout {
+  float: right;
 }
