--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -1,36 +1,42 @@
-@import '../../component/style/color.less';
+@import '../../style/color.less';
 
 body {
-  // background-color: #color[background];
   background-color: rgba(239, 243, 246);
 }
 
-.title {
+.login_title {
+  font-size: 2rem;
   color: #color[themeColor];
 }
 
-.div_login_form {
-  // background-color: rgba(231, 234, 237);
+.login_div {
   background-color: white;
-  border-radius: 5px;
-  padding: 60px;
+  // background-color: blue;
+  // border-radius: 0.5rem;
+  // padding: 4rem;
+  // padding: 60px;
+  padding: 3.75rem;
 
   position: absolute;
-  width: 420px;
-  height: 420px;
+  // width: 25rem;
+  // height: 25rem;
+  width: 26.25rem;
+  height: 26.25rem;
   left: 50%;
   top: 50%;
-  margin-left: -210px;
-  margin-top: -210px;
+  // margin-left: -16.5rem;
+  // margin-top: -16.5rem;
+  // margin-left: -210px;
+  margin-top: -13.125rem;
+  margin-left: -13.125rem;
 }
 
-.login_form {
+.login_div_form {
   background-color: transparent;
-  margin-top: 50px;
-  ;
+  margin-top: 3.125rem;
 }
 
-.cp {
+.login_div_cp {
   text-align: center;
   color: #color[copyrightColor];
 
