--- a/src/style/color.less
+++ b/src/style/color.less
@@ -1,6 +1,6 @@
 #color() {
   background: rgba(250, 250, 250);
-  themecolor: rgba(24, 144, 255);
+  theme: rgba(24, 144, 255);
 
-  copyrightcolor: rgba(24, 144, 255, 0.85);
+  copyright: rgba(24, 144, 255, 0.85);
 }
