--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -6,7 +6,7 @@ body {
 
 .login_title {
   font-size: 2rem;
-  color: #color[themeColor];
+  color: #color[theme];
 }
 
 .login_div {
@@ -38,10 +38,10 @@ body {
 
 .login_div_cp {
   text-align: center;
-  color: #color[copyrightColor];
+  color: #color[copyright];
 
   &:hover {
-    color: #color[themeColor];
+    color: #color[theme];
     cursor: default;
   }
 }
