修改management layout 使用Row和Col布局（未完成）

--- a/src/layouts/management.less
+++ b/src/layouts/management.less
@@ -6,10 +6,11 @@
 @radius: 0.5rem;
 
 body {
-  background-color: rgba(239, 243, 246);
+  // background-color: rgba(239, 243, 246);
+  background-color: red;
   margin: 0;
   padding: 0;
-  min-width: 81.25rem;
+  // min-width: 81.25rem;
   overflow-y: scroll;
 }
 
@@ -59,4 +60,13 @@ body {
   padding-left: 1rem;
   padding-right: 1rem;
   overflow: hidden;
+}
+
+.div_test {
+  height: 3rem;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 3rem;
+  padding: 0.5rem 0;
+  background-color: #color[theme];
 }
